@@ -1,3 +1,7 @@
+2013-05-30  Glenn Morris  <rgm@gnu.org>
+
+	* shr.el (shr-put-image): Silence compiler.
+
 2013-05-29  Glenn Morris  <rgm@gnu.org>
 
 	* gnus-ems.el (set-process-plist): Every supported Emacs has this.
